Working passing of task to directive

--- a/app/tile-grid/tile-grid.template.html
+++ b/app/tile-grid/tile-grid.template.html
@@ -1,6 +1,5 @@
 <div>
     <div ng-repeat="task in $ctrl.tasks">
-        {{ task }}
-        <tile taskId="task"></tile>
+        <tile task="task"></tile>
     </div>
 </div>
